Version 1.0.1
--------------------------------------------------
3 March 2008
+ Settings allows menu link creation.
+ Updated: templates/settings.tpl

Version 1.0.0
--------------------------------------------------
3 December 2007
+ Fixed search location form.
+ Altered verbage on more info section of a ride.