@@ -8,7 +8,8 @@ $settings['default_slocation'] = 0;
 
 // 0 miles
 // 1 kilometers
-$settings['miles_or_kilometers']       = 0;
-$settings['post_limit']                = 5;
+$settings['miles_or_kilometers'] = 0;
+$settings['post_limit']          = 5;
+$settings['carpool']             = true;
 
 ?>
