@@ -1,0 +1,14 @@
+<p><strong>{CREATED_LABEL}:</strong> {CREATED}</p>
+
+<p><strong>{START_ADDRESS_LABEL}:</strong><br />
+{START_ADDRESS}</p>
+
+<p><strong>{DEST_ADDRESS_LABEL}:</strong><br />
+{DEST_ADDRESS}</p>
+
+<p><strong>{COMMENTS_LABEL}:</strong><br />
+{COMMENTS}</p>
+
+<p style="text-align : center">{EMAIL}</p>
+<hr />
+<p style="text-align : center">{CLOSE}</p>
