@@ -1,0 +1,6 @@
+{START_FORM}
+<p><strong>{START_ADDRESS_LABEL}</strong><br />{START_ADDRESS}</p>
+<p><strong>{DEST_ADDRESS_LABEL}</strong><br /> {DEST_ADDRESS}</p>
+<p><strong>{COMMENT_LABEL}</strong><br />{COMMENT}</p>
+{SUBMIT}
+{END_FORM}
