@@ -6,5 +6,7 @@
 {MILES_OR_KILOMETERS_1} {MILES_OR_KILOMETERS_1_LABEL}<br />
 {MILES_OR_KILOMETERS_2} {MILES_OR_KILOMETERS_2_LABEL}
 </p>
+<p>{CARPOOL} {CARPOOL_LABEL}</p>
+<p>{DEFAULT_DESTINATION_LABEL} {DEFAULT_DESTINATION}</p>
 <p>{SUBMIT}</p>
 {END_FORM}
