@@ -1,3 +1,6 @@
+25 September 2008
++ Added carpooling component
+
 Version 1.0.1
 --------------------------------------------------
 3 March 2008
